Mon Sep  5 20:59:30 2011  CHIKANAGA Tomoyuki  <nagachika00@gmail.com>

	* insns.def: change encoding pragma for emacs (shift_jis to utf-8).

Mon Sep  5 19:32:15 2011  CHIKANAGA Tomoyuki  <nagachika00@gmail.com>

	* Makefile.in (INSNS): change command line option -Ks to -Ku for
	  generate *.inc. because insns.def encoding has been changed SJIS to
	  UTF-8. if $BASERUBY is 1.9, -Ks cause an error. [Feature #5128]

Mon Sep  5 18:10:56 2011  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* transcode.c (rb_econv_binmode): newline decorators are
	  exclusive.

Mon Sep  5 15:03:37 2011  NARUSE, Yui  <naruse@ruby-lang.org>

	* test/rubygems/test_gem_security.rb
	  (test_class_build_self_signed_cert): reset opt[:trust_dir] to apply
	  temporary Gem.user_home.

Mon Sep  5 10:04:35 2011  Ayumu AIZAWA  <ayumu.aizawa@gmail.com>

	* README.ja, README.EXT.ja: resolve conflicts. [ruby-dev:44459]

Mon Sep  5 05:13:22 2011  Marc-Andre Lafortune  <ruby-core@marc-andre.ca>

	* numeric.c (flo_round): Make Float#round round big values [bug
	  #5272]

Mon Sep  5 04:28:25 2011  Marc-Andre Lafortune  <ruby-core@marc-andre.ca>

	* numeric.c (int_round): Integer#round always returns an Integer [Bug
	  #5271]

Sun Sep  4 22:28:50 2011  Shugo Maeda  <shugo@ruby-lang.org>

	* lib/net/imap.rb (default_port, default_imap_port,
	  default_tls_port, default_ssl_port, default_imaps_port):
	  added methods for consistency with Net::POP.
	  based on the patch by art lussos.  [ruby-core:38997] [Bug #5198]

Sun Sep  4 21:19:19 2011  Ayumu AIZAWA  <ayumu.aizawa@gmail.com>

	* Change encoding from EUC-JP to UTF-8. [Feature #5128]

Sun Sep  4 00:47:39 2011  Kazuki Tsujimoto  <kazuki@callcc.net>

	* test/ruby/test_fiber.rb (TestFiber#test_no_valid_cfp):
	  add a test. Unlike TestThread#test_no_valid_cfp,
	  this test succeeds even if win32ole is required (see r33153).

Sun Sep  4 00:11:49 2011  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* variable.c (rb_const_set): show the previous definition